--- a/SysPOS (FRONT-END)/src/components/dashboard/Navbar.scss
+++ b/SysPOS (FRONT-END)/src/components/dashboard/Navbar.scss
@@ -104,15 +104,20 @@ a {
   position: relative;
 }
 
+
 .ds-menu ul li a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
   cursor: pointer;
   color: var(--color5);
   background: transparent;
   width: 100%;
-  display: block;
   margin-bottom: 10px;
   padding: 10px;
   border-radius: 4px;
+  text-decoration: none;
 }
 
 .ds-menu ul li a:hover {
@@ -222,6 +227,11 @@ a {
 .sign-off a.btn-sign-off:hover {
   background: #dd4b39;
   color: #fff;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
 }
 
 .sign-off a.btn-sign-off i {
