Habilitando boton editar

--- a/SysPOS (FRONT-END)/src/pages/scss/Usuarios.scss
+++ b/SysPOS (FRONT-END)/src/pages/scss/Usuarios.scss
@@ -7,6 +7,9 @@
   }
 
   .form-modal{
+    &.active{
+      display: none;
+    }
     display: flex;
     justify-content: center;
     align-items: center;
