--- a/SysPOS (FRONT-END)/src/components/Tables/Table.scss
+++ b/SysPOS (FRONT-END)/src/components/Tables/Table.scss
@@ -40,3 +40,13 @@ tbody tr:not(:last-child) {
 .table-container::-webkit-scrollbar-thumb:hover {
   background-color: #555; /* Color al pasar el mouse */
 } /*# sourceMappingURL=mantenimieto.css.map */
+
+
+.content-table thead {
+  background-color: #4651ed; /* Fondo del encabezado */
+  color: #ffffff;
+}
+
+.table-container::-webkit-scrollbar-track {
+  background: linear-gradient(180deg, #4651ed 44px, #ffffff 44px);
+}
