Secciones de ventas y productos

--- a/SysPOS (FRONT-END)/src/pages/scss/Usuarios.scss
+++ b/SysPOS (FRONT-END)/src/pages/scss/Usuarios.scss
@@ -1,9 +1,9 @@
-.tabla-clientes .table-container {
+.table-container {
   
     max-height: 40rem;
   }
   
-  .tabla-clientes .content-table {
+ .content-table {
     width: 100%;
   }
 
